--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -45,6 +45,7 @@ html,
 body {
     height: 100%;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 
